# ContractVerify

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
CommonTypes/: Cargo.toml
CommonTypes/src/: common.rs  instructions.rs  lib.rs  outcome.rs  store.rs
VerifyProgram/: Cargo.toml
VerifyProgram/src/: lib.rs  storage.rs
